Cultibox (1.1.14) precise; urgency=low
    + Correction de la connxion PDO: passage de localhost à 127.0.0.1 (problème de timeout due au reverse DNS IPV6)
    + Correction des cases avec plusieurs valeurs qui ne marchaient pas
    + Déplacement du boutton "resetzoom" des logs au centre en bas du graphe

-- Yann Genevois <yann.genevois@gmail.com> Fri Apr 26 11:02:38 CEST 2013


Cultibox (1.1.13) precise; urgency=low
    + Non rechargement de la page des programmes, passage a jquery 1.9, relooking css...
    + Debug en masse...
    + Mise en place de la personnalisation des boites de dialogues d'erreur, de confirmation et de validation grâce à JQUERY
    + Mise en place du timezone en fonction de la langue selectionnée
    + Changement de place de emetteur.hex qui se trouve maintenant dans le dossier cnf
    + Modification des scripts d'install pour prend en compte les différentes langues
    + Passage du WdCalendar à FullCalendar, un calendrier pour la gestion des évènements full Jquery-CSS
    + Ajout de la possibilité d'utiliser des fichiers XML au format atom pour programmer des évènements dans le calendrier
    + Passage par un boutton exterieur pour réinitialiser le zoom de highchart...bug dans le code de highchart
    + Optimisation mémoire de la page des logs, division par 4 du temps de chargement et par 10 de la mémoire utilisée
    + Ajout d'un module de debug mémoire si l'option DEBUG est activée
    + Utilisation de PDO pour créer les connexions aux bases de données pour la partie calendrier
    + Optimisation des requettes de la partie logs
    + Utilisation de la commande mysqldump pour export au format csv les données des bases
    + Passage au connecteur php PDO au lieu de JDatabase pour les requettes SQL
    + Ajout et debug de fichiers XML pour le calendrier lunaire
    + Le menu selectionné dans la configuration apparait d'une couleur différente

-- Yann Genevois <yann.genevois@gmail.com> Tue Apr  9 09:24:50 CEST 2013

