@@ -2,6 +2,7 @@ Cultibox (1.1.14) precise; urgency=low
     + Correction de la connxion PDO: passage de localhost à 127.0.0.1 (problème de timeout due au reverse DNS IPV6)
     + Correction des cases avec plusieurs valeurs qui ne marchaient pas
     + Déplacement du boutton "resetzoom" des logs au centre en bas du graphe
+    + Création des index sur le timestamp pour les tables des logs et power
 
 -- Yann Genevois <yann.genevois@gmail.com> Fri Apr 26 11:02:38 CEST 2013
 
